--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "history": "^4.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^4.1.2",
     "rxjs": "^6.3.3",
     "yup": "^0.26.10"
